@@ -10,6 +10,7 @@ Moodle Direct v2 Release Notes
 Date:       2014-November-17
 Release:    v2014012410
 
+- Cron scores update in the Plagiarism plugin are now split by submission type.
 - Fixes:
 	> Anonymous marking reveal form fixed and now initialises correctly on inbox load.
 	> Incorrect repository value fixed when synching assignments in Plagiarism plugin.
